--- a/TeamWork/Website/Website.csproj
+++ b/TeamWork/Website/Website.csproj
@@ -208,6 +208,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-MyBlog-20160815053336.mdf" />
+    <Content Include="App_Data\aspnet-MyBlog-20160815053336_log.ldf">
+      <DependentUpon>aspnet-MyBlog-20160815053336.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -268,9 +272,7 @@
     <Content Include="Views\Home\Blog.cshtml" />
     <Content Include="Views\Home\Game.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
